--- a/docker/grafana/grafana-datasources.yml
+++ b/docker/grafana/grafana-datasources.yml
@@ -1,9 +1,19 @@
 apiVersion: 1
 
 datasources:
+
+  # Prometheus
   - name: Prometheus
     type: prometheus
     access: proxy
     url: http://prometheus:9090
     isDefault: true
+    editable: true
+
+  # Loki
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    isDefault: false
     editable: true
