--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -1,15 +1,11 @@
-# my global config
 global:
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  scrape_interval: 15s
+  evaluation_interval: 15s
+  scrape_timeout: 10s
 
-otlp:
-  # Recommended attributes to be promoted to labels.
-  promote_resource_attributes:
-    - container.name
-  # Ingest OTLP data keeping all characters in metric/label names.
-  translation_strategy: NoUTF8EscapingWithSuffixes
-
-storage:
-  # OTLP is a push-based protocol, Out of order samples is a common scenario.
-  tsdb:
-    out_of_order_time_window: 30m
+scrape_configs:
+  - job_name: 'otel-collector'
+    scheme: http
+    static_configs:
+      - targets:
+          - otel-collector:9464
