--- a/docker/collector/otel-collector-config.yml
+++ b/docker/collector/otel-collector-config.yml
@@ -3,20 +3,26 @@ receivers:
     protocols:
       grpc:
         endpoint: 0.0.0.0:4317
-      http:
-        endpoint: 0.0.0.0:4318
 exporters:
-  debug:
-    verbosity: detailed
   prometheus:
     endpoint: "0.0.0.0:9464"
   loki:
     endpoint: "http://loki:3100/loki/api/v1/push"
+  otlp/tempo:
+    endpoint : tempo:4317
+    tls:
+      insecure: true
+connectors:
+  servicegraph:
+    latency_histogram_buckets: [100ms, 250ms, 1s, 5s, 10s]
 service:
   pipelines:
     metrics:
-      receivers: [otlp]
+      receivers: [otlp, servicegraph]
       exporters: [prometheus]
     logs:
       receivers: [otlp]
       exporters: [loki]
+    traces:
+      receivers: [ otlp ]
+      exporters: [ otlp/tempo, servicegraph ]
