--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: jdbc:postgresql://localhost:5432/opentelemetry
+    url: jdbc:postgresql://localhost:5432/item-service
 
 ---
 spring:
@@ -34,4 +34,4 @@ spring:
     activate:
       on-profile: docker
   datasource:
-    url: jdbc:postgresql://postgres:5432/opentelemetry
+    url: jdbc:postgresql://postgres:5432/item-service
